behat tests for category, category tree, products
