# config/packages/nelmio_api_doc.yaml
@@ -98,6 +98,40 @@ nelmio_api_doc:
                         type: boolean
                         required: true
                         example: true
+            account_upd:
+                type: object
+                properties:
+                    firstName:
+                        type: string
+                        required: true
+                        description: User first name
+                        example: Jon
+                    lastName:
+                        type: string
+                        required: true
+                        description: User last name
+                        example: Dove
+                    language:
+                        type: string
+                        required: true
+                        description: User language
+                        example: EN
+                    password:
+                        type: string
+                        required: true
+                        example: 12345678
+                    passwordRepeat:
+                        type: string
+                        equired: true
+                        example: 12345678
+                    roleId:
+                        type: string
+                        required: true
+                        example: 86800536-0f2a-4920-9291-f35fdcea3839
+                    isActive:
+                        type: boolean
+                        required: true
+                        example: true
             status:
                 type: object
                 properties:
@@ -204,6 +238,15 @@ nelmio_api_doc:
                         description: Category code (use only when create)
                         required: true
                         example: category_code_1
+                    name:
+                        type: object
+                        description: category name
+                        example:
+                            DE: Name DE
+                            EN: Name EN
+            category_upd:
+                type: object
+                properties:
                     name:
                         type: object
                         description: category name
